--- a/bridge.css
+++ b/bridge.css
@@ -17,24 +17,23 @@
 }
 
 #pbs_bridge {
+    background-color: #B3CE34;
+    color: #fff;
     font-family: Arial, Verdana, sans-serif;
-    padding: 1px;
+    margin: 0;
+    padding: 0;
     position: absolute;
+    text-align: left;
     z-index: 1000001;
 }
 
-#pbs_bridge a {
+#pbs_bridge a#pbs_bridge_link {
+    color: #516F00;
     cursor: pointer;
-}
-
-#pbs_bridge, #pbs_bridge_inner {
     display: block;
-    font-family: Arial, Verdana, sans-serif;
     font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-    padding: 0;
-    text-align: left;
+    margin: 20px 20px 20px 90px;
+    text-decoration: underline;
 }
 
 #pbs_bridge p {
@@ -51,7 +50,7 @@
 #pbs_bridge_inner {
     font-size: 16px;
     line-height: 1.4;
-    padding: 1px;
+    padding: 15px 15px 0;
     text-align: left;
 }
 
@@ -59,7 +58,9 @@
     border: 0;
 }
 
-#pbs_bridge_header, #pbs_bridge_close span {
+
+/* Apply sprite background to everything that should be sprited! */
+#pbs_bridge_header, #pbs_bridge_close, #pbs_bridge_sign, #pbs_bridge .pbs_bridge_signLogo {
     background-image: url(http://soup.pbskids.org/images/bridge/sprite.gif);
 }
 
@@ -74,17 +75,43 @@
 }
 
 #pbs_bridge_close {
+    background-position: -213px 0;
     bottom: 0;
+    cursor: pointer;
+    display: block;
     height: 67px;
     left: 15px;
     position: absolute;
     width: 55px;
 }
 
-#pbs_bridge_close span {
-    background-position: -213px 0;
+#pbs_bridge_sign {
+    background-position: 0 0;
     display: block;
-    height: 67px;
-    position: absolute;
-    width: 55px;
+    height: 92px;
+    margin: 0 0 0 80px;
+    padding: 0;
+    width: 213px;
+}
+
+#pbs_bridge .pbs_bridge_signLogo {
+    display: block;
+    margin: 0; 
+    padding: 0;
+    position: relative;
+    width: 159px;
+}
+
+#pbs_bridge_parentsLogo {
+    background-position: -268px -33px;
+    height: 34px;
+    left: 18px;
+    top: 18px;
+}
+
+#pbs_bridge_teachersLogo {
+    background-position: -268px 0;
+    height: 33px;
+    left: 25px;
+    top: 15px;
 }
